[gd_scene load_steps=19 format=3 uid="uid://biplg0to2jr5g"]

[ext_resource type="Script" uid="uid://ce3lyehgm1881" path="res://Scripts/enemy.gd" id="1_hk5c7"]
[ext_resource type="Texture2D" uid="uid://de3vbl6k3htnv" path="res://Assets/Slime pack/Slime black.png" id="2_hk5c7"]
[ext_resource type="Texture2D" uid="uid://c66y7tt2aqex3" path="res://Assets/Slime pack/Tiny_Slime Red.png" id="3_oemcd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nty5t"]
atlas = ExtResource("2_hk5c7")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oemcd"]
atlas = ExtResource("2_hk5c7")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7s2d"]
atlas = ExtResource("2_hk5c7")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_137p8"]
atlas = ExtResource("2_hk5c7")
region = Rect2(288, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2402"]
atlas = ExtResource("2_hk5c7")
region = Rect2(336, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajxpu"]
atlas = ExtResource("2_hk5c7")
region = Rect2(384, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrclk"]
atlas = ExtResource("2_hk5c7")
region = Rect2(432, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("3_oemcd")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("3_oemcd")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgqy0"]
atlas = ExtResource("2_hk5c7")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6cip"]
atlas = ExtResource("2_hk5c7")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3168"]
atlas = ExtResource("2_hk5c7")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5y778"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nty5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oemcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7s2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_137p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2402")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajxpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrclk")
}],
"loop": false,
"name": &"dead",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}],
"loop": true,
"name": &"walkDown",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgqy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6cip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3168")
}],
"loop": true,
"name": &"walkSide",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jmwgi"]
radius = 43.56604

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 49.0408

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_hk5c7")
damage = 30
attackTime = 0.2
health = 75

[node name="Icon" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_5y778")
animation = &"walkSide"
autoplay = "walkSide"
frame_progress = 0.080849886

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jmwgi")

[node name="AttackZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone"]
shape = SubResource("CircleShape2D_4gyqm")

[connection signal="animation_finished" from="Icon" to="." method="_on_icon_animation_finished"]
[connection signal="area_entered" from="AttackZone" to="." method="_on_area_2d_body_entered"]
[connection signal="area_exited" from="AttackZone" to="." method="_on_area_2d_body_exited"]
